Added base of raytracing + sphere as the only object for now

--- a/src/main/Makefile
+++ b/src/main/Makefile
@@ -15,11 +15,15 @@ RM		=	@rm -vf
 MAKE		+=	--no-print-directory
 
 SRCXX		=	main.cpp
-SRC		=	rt_getpixel.c
-SRC		+=	objlist.c
-SRC		+=	rt_parse_file.c
-SRC		+=	rt.c
+SRC		=	objlist.c
+SRC		+=	quadratic.c
 SRC		+=	rotations.c
+SRC		+=	rt.c
+SRC		+=	rt_init.c
+SRC		+=	rt_getpixel.c
+SRC		+=	rt_parse_file.c
+
+SRC		+=	sphere.c
 
 OBJ		=	$(SRC:.c=.o) $(SRCXX:.cpp=.o)
 
